@@ -73,11 +73,6 @@
     <screen>&mountvirtfs;</screen> 
   </sect1>
 
-  <sect1 id="consolelog" role="wrap">
-    <title>/etc/rc.d/init.d/consolelog</title>
-    <screen>&consolelog;</screen> 
-  </sect1>
-
   <sect1 id="modules" role="wrap">
     <title>/etc/rc.d/init.d/modules</title>
     <screen>&modules;</screen> 
