@@ -36,15 +36,15 @@ case "${1}" in
       mount -n /run || failed=1
       mkdir -p /run/{var,lock,shm}
 
-      log_info_msg "Mounting virtual file systems: /run" 
+      log_info_msg "Mounting virtual file systems:     ${INFO}/run" 
 
       if ! mountpoint /proc >/dev/null; then
-         log_info_msg2 " /proc"
+         log_info_msg2 " ${INFO}/proc"
          mount -n /proc || failed=1
       fi
 
       if ! mountpoint /sys >/dev/null; then
-         log_info_msg2 " /sys" 
+         log_info_msg2 " ${INFO}/sys" 
          mount -n /sys || failed=1
       fi
 
