@@ -84,7 +84,7 @@ case "${1}" in
 
       # Now wait for udevd to process the uevents we triggered
       /sbin/udevadm settle
-      log_success_msg2 
+      #log_success_msg2 
       ;;
 
    *)
