@@ -56,7 +56,7 @@ case "${1}" in
 
       # Now wait for udevd to process the uevents we triggered
       /sbin/udevadm settle
-      evaluate_retval
+      #evaluate_retval
       ;;
 
    *)
