@@ -2,11 +2,21 @@
 # Optional parameters for boot scripts.
 
 # Distro Information
-DISTRO="Linux From Scratch" # The distro name
-DISTRO_CONTACT="lfs-dev@linuxfromscratch.org" # Bug report address
-DISTRO_MINI="LFS" # Short name used in filenames for distro config
+# These values, if specified here, override the defaults
+#DISTRO="Linux From Scratch" # The distro name
+#DISTRO_CONTACT="lfs-dev@linuxfromscratch.org" # Bug report address
+#DISTRO_MINI="LFS" # Short name used in filenames for distro config
 
 # Define custom colors used in messages printed to the screen
+
+# Please consult `man console_codes` for more information
+# under the "ECMA-48 Set Graphics Rendition" section
+#
+# Warning: when switching from a 8bit to a 9bit font,
+# the linux console will reinterpret the bold (1;) to
+# the top 256 glyphs of the 9bit font.  This does
+# not affect framebuffer consoles
+
 # These values, if specified here, override the defaults
 #BRACKET="\\033[1;34m" # Blue
 #FAILURE="\\033[1;31m" # Red
@@ -15,9 +25,16 @@ DISTRO_MINI="LFS" # Short name used in filenames for distro config
 #SUCCESS="\\033[1;32m" # Green
 #WARNING="\\033[1;33m" # Yellow
 
+# Use a colored prefix
+# These values, if specified here, override the defaults
+#BMPREFIX="     "
+#SUCCESS_PREFIX="${SUCCESS}  *  ${NORMAL}"
+#FAILURE_PREFIX="${FAILURE}*****${NORMAL}"
+#WARNING_PREFIX="${WARNING} *** ${NORMAL}"
+
 # Interactive startup
 #IPROMPT="yes" # Whether to display the interactive boot promp
-itime="10"    # The ammount of time (in seconds) to display the prompt
+itime="3"    # The ammount of time (in seconds) to display the prompt
 
 # The total length of the distro welcome string, without escape codes
 wlen=$(echo "Welcome to ${DISTRO}" | wc -c )
