@@ -37,6 +37,20 @@
 
 -->
     <listitem>
+      <para>2011-11-14</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Updates to boot scripts: 
+          general cleanup;
+          move consolelog function to rc;
+          clean up boot logging functions;
+          fix interactive prompt between run level S and target run level.  
+          Thanks to DJ Lucas.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2011-10-29</para>
       <itemizedlist>
         <listitem>
